--- a/markdown/6.md
+++ b/markdown/6.md
@@ -1,6 +1,8 @@
 + [author](https://github.com/3293172751)
 <a href="https://github.com/3293172751" target="_blank"><img src="https://img.shields.io/badge/Github-xiongxinwei-inactive?style=social&logo=github"></a></p>
-# 第6节 堆结构
+
+# 第6节 堆结构和堆排序详讲
+
 + [回到目录](../README.md)
 + [回到项目首页](../../README.md)
 + [上一节](5.md)
@@ -8,9 +10,7 @@
 ---
 [TOC]
 
-## 堆的基本存储
-
-### 概念及其介绍
+## 堆的基本存储概念及其介绍
 
 堆(Heap)是计算机科学中一类特殊的数据结构的统称。
 
@@ -464,6 +464,8 @@ queue.offer(‘a');
 queue.poll('b');   //弹出
 queue.add(8);   //加入
 ```
+
+
 
 ## END 链接
 
