--- a/markdown/7.md
+++ b/markdown/7.md
@@ -1,6 +1,6 @@
 + [author](https://github.com/3293172751)
 <a href="https://github.com/3293172751" target="_blank"><img src="https://img.shields.io/badge/Github-xiongxinwei-inactive?style=social&logo=github"></a></p>
-# 第7节
+# 第7节 桶排序
 + [回到目录](../README.md)
 + [回到项目首页](../../README.md)
 + [上一节](6.md)
@@ -8,7 +8,105 @@
 ---
 [TOC]
 
+## 桶排序思想
 
+> 桶排序用的不是很多，知道思想就可以了
+
+其实桶排序重要的是它的思想，而不是具体实现，桶排序从字面的意思上看：
+
+- 桶：若干个桶，说明此类排序将数据放入若干个桶中。
+- 桶：每个桶有容量，桶是有一定容积的容器，所以每个桶中可能有多个元素。
+- 桶：从整体来看，整个排序更希望桶能够更匀称，即既不溢出(太多)又不太少。
+  ![img](assets/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzQwNjkzMTcx,size_1,color_FFFFFF,t_70.png)
+
+> 工作的原理是将数组分到有限数量的桶子里。每个桶子再个别排序（有可能再使用别的排序算法或是以递归方式继续使用桶排序进行排序）。桶排序是鸽巢排序的一种归纳结果。当要被排序的数组内的数值是均匀分配的时候，桶排序使用线性时间（Θ（n））。但桶排序并不是 比较排序，他不受到 O(n log n) 下限的影响。
+
+用通俗易懂的话来理解：
+
+- **将待排序的序列分到若干个桶中，每个桶内的元素再进行个别排序。**
+- 时间复杂度最好可能是线性O(n)，桶排序不是基于比较的排序
+
+当然，**桶排序是一种用空间换取时间的排序。**
+
+既然是排序，那么最终的结果肯定是从小到大的，桶排序借助桶的位置完成一次初步的排序——将待排序元素分别放至各个桶内。
+
+而我们通常根据待排序元素整除的方法将其较为均匀的放至桶中，如`8 5 22 15 28 9 45 42 39 19 27 47 12`这个待排序序列，**假设放入桶编号的规则**为：`n/10`。这样首先各个元素就可以直接通过整除的方法放至对应桶中。而右侧所有桶内数据都比左侧的要大！
+
+![img](assets/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzQwNjkzMTcx,size_1,color_FFFFFF,t_70-165847389714439.png)
+
+在刚刚放入桶中的时候，各个桶的大小相对可以确定，右侧都比左侧大，但桶内还是无序的，对各个桶内分别进行排序，再依次按照桶的顺序、桶内序列顺序得到一个最终排序的序列。
+![img](assets/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzQwNjkzMTcx,size_1,color_FFFFFF,t_70-165847389714540.png)
+
+以上就是桶排序在算法上的思想了。如果使用java具体实现的话思路也很简单：用List[]类型的集合数组表示桶，每个List代表一个桶，将数据根据整除得到的值直接放到对应编号的集合里面去，再依次进行排序就可以了。
+
+
+
+### 时间复杂度分析
+
+桶排序的时间复杂度到底是多少？
+
+我们假设有`n`个待排序数字。分到`m`个桶中，如果分配均匀这样平均每个桶有`n/m`个元素。首先在这里我郑重说明一下桶排序的算法时间复杂度有两部分组成：
+
+- 1.遍历处理每个元素，O(n)级别的普通遍历
+- 2.每个桶内再次排序的时间复杂度总和
+
+对于第一个部分，我想大家都应该理解最后排好序的取值遍历一趟的O(n);而第二部分咱们可以进行这样的分析：
+
+- 如果桶内元素分配较为均匀**假设每个桶内部使用的排序算法为快速排序**，那么每个桶内的时间复杂度为`(n/m) log(n/m)`。有m个桶，那么时间复杂度为`m * (n/m)log(n/m)`=`n (log n-log m)`.
+  ![img](assets/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzQwNjkzMTcx,size_1,color_FFFFFF,t_70-165847389714541.png)
+  所以最终桶排序的时间复杂度为：`O(n)+O(n*(log n- log m))`=`O(n+n*(log n -log m))` 其中m为桶的个数。我们有时也会写成O(n+c),其中c=n*(log n -log m);
+
+在这里如果到达极限情况`n=m`时。就能确保避免桶内排序，将数值放到桶中不需要再排序达到O(n)的排序效果,当然这种情况属于计数排序，后面再详解计数排序记得再回顾。
+![img](assets/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzQwNjkzMTcx,size_1,color_FFFFFF,t_70-165847389714542.png)
+
+### 桶排序适用情况
+
+桶排序并且像常规排序那样没有限制，桶排序有相当的限制。因为**桶的个数和大小都是我们人为设置的**。而每个桶又要避免空桶的情况。所以我们在使用桶排序的时候即需要对**待排序数列要求偏均匀**，又要要求**桶的设计兼顾效率和空间。**
+
+**待排序序列要求均匀？我要不均匀又会怎么样呢？**
+会这样：
+![img](assets/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzQwNjkzMTcx,size_1,color_FFFFFF,t_70-165847389714543.png)
+这样其实相当于只用了有效的很少个数桶，而再看桶排序的时间复杂度：`O(n+n*(log n -log m))`m取向1，log m去向0.整个复杂度变成`O(n+nlogn)`从级别来看就是`O(nlogn)`，你瞅瞅你瞅瞅，这种情况就跟没用桶一样，就是快排(或其他排序)的时间复杂度。
+
+**那，那不能我搞100000个桶嘛？**
+不可以，真的不可以，如果100000个桶，你看看会造成什么情况：
+![img](assets/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzQwNjkzMTcx,size_1,color_FFFFFF,t_70-165847389714544.png)
+这才短短不到100个数，你为了一一映射用100000个空间，空间内容浪费不说，你遍历虽然O(n)也是100000次也比100个的`O(nlogn)`大上很多啊，真是折了夫人又折兵。
+
+所以现在明白前面说的话了吧：数要相对均匀分布，桶的个数也要合理设计。总之桶排序是一种用空间换取时间的排序。在设计桶排序，你需要知道输入数据的上界和下界，看看数据的分布情况，再考虑是否用桶排序，当然如果能用好桶排序，效率还是很高的！
+
+## 实现一个桶排序
+
+在这里用java给大家实现一个桶排序。假设序列为：`1 8 7 44 42 46 38 34 33 17 15 16 27 28 24`；我们选用5个桶进行桶排序。
+
+```java
+import java.util.ArrayList;
+import java.util.List;
+//微信公众号：bigsai
+public class test3 {
+	public static void main(String[] args) {
+		int a[]= {1,8,7,44,42,46,38,34,33,17,15,16,27,28,24};
+		List[] buckets=new ArrayList[5];
+		for(int i=0;i<buckets.length;i++)//初始化
+		{
+			buckets[i]=new ArrayList<Integer>();
+		}
+		for(int i=0;i<a.length;i++)//将待排序序列放入对应桶中
+		{
+			int index=a[i]/10;//对应的桶号
+			buckets[index].add(a[i]);
+		}
+		for(int i=0;i<buckets.length;i++)//每个桶内进行排序(使用系统自带快排)
+		{
+			buckets[i].sort(null);
+			for(int j=0;j<buckets[i].size();j++)//顺便打印输出
+			{
+				System.out.print(buckets[i].get(j)+" ");
+			}
+		}	
+	}
+}
+```
 
 
 
