new addly file markdown - 10

--- a/markdown/10.md
+++ b/markdown/10.md
@@ -76,6 +76,10 @@ Output: []
 
 > 关于这道题，我们可以考虑将数据放在栈里面，用到栈的先进后出的原则依次弹出
 
+![image-20220723181248132](assets/image-20220723181248132.png)
+
+##### Go语言
+
 ```go
 /**
  * Definition for singly-linked list.
@@ -95,6 +99,138 @@ func reverseList(head *ListNode) *ListNode {
     }
     return prev
 }
+```
+
+##### python
+
+```python
+# Definition for singly-linked list.
+# class ListNode:
+#     def __init__(self, val=0, next=None):
+#         self.val = val
+#         self.next = next
+class Solution:
+    def reverseList(self, head: Optional[ListNode]) -> Optional[ListNode]:
+        pre, cur = None, head
+        while cur:
+            tmp = cur.next   #保存当前结点
+            cur.next = pre
+            pre = cur
+            cur = tmp    #当前结点是之前保存的结点  后移一位
+        return pre   #返回的是前一个结点        
+    
+```
+
+##### java
+
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode() {}
+ *     ListNode(int val) { this.val = val; }
+ *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
+ * }
+ */
+class Solution {
+    public ListNode reverseList(ListNode head) {
+    ListNode pre = null;
+    ListNode cur = head;
+    while(cur != null){
+        ListNode tmp = cur.next;    //保存下一个结点
+        cur.next = pre;    //指向前一个结点
+        pre = cur;    //保存后续的结点
+        cur = tmp;   //当前结点是之前保存的哪个结点
+        }
+    return pre;
+    }
+}
+```
+
+##### C++
+
+```Cpp
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode() : val(0), next(nullptr) {}
+ *     ListNode(int x) : val(x), next(nullptr) {}
+ *     ListNode(int x, ListNode *next) : val(x), next(next) {}
+ * };
+ */
+class Solution {
+public:
+    ListNode* reverseList(ListNode* head) {
+    ListNode* pre = nullptr;
+    ListNode* cur = head;
+    while(cur != nullptr){
+        ListNode* tmp = cur->next;    //保存下一个结点
+        cur->next = pre;    //指向前一个结点
+        pre = cur;    //保存后续的结点
+        cur = tmp;   //当前结点是之前保存的哪个结点
+        }
+    return pre;
+    }        
+};
+```
+
+
+
+##### c语言
+
+```c
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     struct ListNode *next;
+ * };
+ */
+
+
+struct ListNode* reverseList(struct ListNode* head){
+    struct ListNode* pre = NULL;
+    struct ListNode* cur = head;
+    while(cur != NULL)
+    {
+        struct ListNode* tmp = cur->next;    //保存下一个结点
+        cur->next = pre;    //指向前一个结点
+        pre = cur;    //保存后续的结点
+        cur = tmp;   //当前结点是之前保存的哪个结点
+        }
+    return pre;
+}
+```
+
+##### JavaScript
+
+```javascript
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @return {ListNode}
+ */
+var reverseList = function(head) {
+    var prev = null  //定义一个链表
+    var curr = head
+    while(curr) {
+        const next = curr.next;
+        curr.next = prev;   //改变链表
+        prev = curr;  
+        curr = next;
+    }
+    return prev;
+};
 ```
 
 
