--- a/markdown/10.md
+++ b/markdown/10.md
@@ -1,14 +1,19 @@
 + [author](https://github.com/3293172751)
-<a href="https://github.com/3293172751" target="_blank"><img src="https://img.shields.io/badge/Github-xiongxinwei-inactive?style=social&logo=github"></a></p>
+  <a href="https://github.com/3293172751" target="_blank"><img src="https://img.shields.io/badge/Github-xiongxinwei-inactive?style=social&logo=github"></a></p>
 
 # 第10节 单链表数据结构
 
 + [回到目录](../README.md)
 + [回到项目首页](../../README.md)
 + [上一节](9.md)
+
 > ❤️💕💕算法学习笔记和LeetCode的刷题笔记与记录。Myblog:[http://nsddd.top](http://nsddd.top/)
+
 ---
+
 [TOC]
+
+
 
 ## 单链表的结点结构
 
@@ -43,7 +48,7 @@ Class Node(v) {
 
 ### 单向链表和双向链表的反转
 
-+ ### [leetcode206](https://leetcode.com/problems/reverse-linked-list/)
++  [leetcode206](https://leetcode.com/problems/reverse-linked-list/)
 
 Given the `head` of a singly linked list, reverse the list, and return *the reversed list*.
 
@@ -617,10 +622,185 @@ class Solution {
 
 
 
+### 两个链表相交的问题
+
++ [leetcode面试题52](https://leetcode.cn/problems/liang-ge-lian-biao-de-di-yi-ge-gong-gong-jie-dian-lcof/)
+
+#### 题目描述
+
+![img](https://assets.leetcode-cn.com/aliyun-lc-upload/uploads/2018/12/14/160_example_1.png)
+
+```
+输入：intersectVal = 8, listA = [4,1,8,4,5], listB = [5,0,1,8,4,5], skipA = 2, skipB = 3
+输出：Reference of the node with value = 8
+输入解释：相交节点的值为 8 （注意，如果两个列表相交则不能为 0）。从各自的表头开始算起，链表 A 为 [4,1,8,4,5]，链表 B 为 [5,0,1,8,4,5]。在 A 中，相交节点前有 2 个节点；在 B 中，相交节点前有 3 个节点。
+```
+
+- 单链表可能有环, 也可能无环. 两个链表可能相交, 可能不相交. 实现一个函数, 如果两个链表相交, 则返回相交的第一个节点; 如果不相交, 返回null即可.
+- 链表的长度为M, N. 要求时间复杂度达到O(M+N), 额外空间复杂度达到O(1).
+
+#### 解题思路
+
+- 此题目可以拆分成三个子问题:
+  - 如何判断一个链表是否有环, 如果有, 则返回第一个进入环的节点, 没有则返回null.
+  - 如何判断两个无环链表是否相交, 相交则返回第一个相交节点, 不相交则返回null.
+  - 如何判断两个有环链表是否相交, 相交则返回第一个相交节点, 不相交则返回null.
+
++ 简单方法：使用哈希表的方法判断是否有环，第一个就是入环结点
+  + 有环的链表一定走不出来，如果能走出来，就一定没有环
++ 进阶方法：使用快慢指针
+
+#### 判断是否有环
+
+![image-20220724162746702](assets/image-20220724162746702.png)
+
+- 采取快慢指针法. 设置快指针fast和慢指针slow.
+- 第一次循环, fast走两步, slow走一步. 如果fast = null, 则无环返回null. 否则fast = slow.
+- 当fast = slow时候, 让fast回到头节点, 然后fast和slow每次走一步. 当fast == slow时候, 相遇的节点就是第一次入环的节点.
+
+
+
+#### 简单解题哈希表
+
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode(int x) {
+ *         val = x;
+ *         next = null;
+ *     }
+ * }
+ */
+public class Solution {
+    public ListNode getIntersectionNode(ListNode headA, ListNode headB) {
+        Set<ListNode> visited = new HashSet<ListNode>();
+        for(ListNode temp = headA; temp != null; temp = temp.next){
+            visited.add(temp);
+        }
+        for(ListNode temp = headB; temp != null; temp = temp.next){
+            if(visited.contains(temp)){
+                return temp;
+            }
+        }
+        return null;
+    }
+}
+```
+
+
+
+#### 双指针解题
+
++ 第一种情况是两个链表没有相交的结点
+  + 找到最后一个结点，以及求出当前的链表最后一个结点长度
+  + 链表二的最后一个结点和长度
++ 第二种情况是两个链表之间有相同重合的结点
+  + 最后一个结点相同
+  + 先求长度和最后一个end结点
+
++ end相同说明是情况二
++ end不同说明是情况一
+
+
+
+**golang**
+
+```go
+/**
+ * Definition for singly-linked list.
+ * type ListNode struct {
+ *     Val int
+ *     Next *ListNode
+ * }
+ */
+func getIntersectionNode(headA, headB *ListNode) *ListNode {
+    //进阶方法  -- 和一个链表不一样的是：第一个结点有可能是一样的
+    if headA == nil || headB == nil {
+        return nil
+    }
+    var n int = 0;    
+    pa, pb := headA, headB    //pb.Next.Next
+    for pa.Next != nil {   //发现空结点就停下
+        n++ 
+        pa = pa.Next
+    }
+    for pb.Next != nil {
+        n--    //统计pb和pa长度做差
+        pb = pb.Next
+    }
+    if pa != pb {
+        //最后的结点1不相等
+        return nil
+    }
+    //找到长的链
+    if n > 0 {  //pa长
+        pa = headA
+        pb = headB
+    }else{
+        pa = headB
+        pb = headA
+    }
+    if n < 0 {
+        //取绝对值
+        n = (-n)
+    }
+    //pb = headB
+    for n != 0 {
+        n--
+        pa = pa.Next
+        //往回走，直到找到pa相同的结点
+    }
+    for pb != pa {    //再次相遇说明找到了第一个结点
+        pa = pa.Next
+        pb = pb.Next
+    }
+    return pa
+}
+```
+
+
+
+
+
+#### 一个链表的话，怎么找到第一个重合结点
+
+```go
+func getIntersectionNode(head *ListNode) *ListNode {
+    //进阶方法
+    if head == nil || head.Next == nil || head.Next.Next == nil {
+        return nil
+    }
+    pa, pb := head.Next, head.Next.Next   //pb.Next.Next
+    for pa != pb {
+        if pa.Next == nil || pb.Next.Next == nil {
+            return nil
+        }
+        //不相等，就一直往下走
+        pa, pb = pa.Next, pb.Next.Next
+    }
+    
+    // 找到了相等的结点
+    pb = head   //相遇了快结点跳到开头
+    for pb != pa {
+        pa, pb = pa.Next, pb.Next
+    }
+    return pa
+}
+```
+---
+markmap:
+  initialExpandLevel: 1
+---
+
 ## END 链接
 
 + [回到目录](../README.md)
 + [上一节](9.md)
 + [下一节](11.md)
+
 ---
+
 + [参与贡献❤️💕💕](https://github.com/3293172751/Block_Chain/blob/master/Git/git-contributor.md)
