--- a/markdown/12.md
+++ b/markdown/12.md
@@ -1,6 +1,13 @@
+---
+title:链表
+author:xiongxinwei
+---
 + [author](https://github.com/3293172751)
-<a href="https://github.com/3293172751" target="_blank"><img src="https://img.shields.io/badge/Github-xiongxinwei-inactive?style=social&logo=github"></a></p>
-# 第12节
+  <a href="https://github.com/3293172751" target="_blank"><img src="https://img.shields.io/badge/Github-xiongxinwei-inactive?style=social&logo=github"></a>
+
+
+# 第12节 链表
+
 + [回到目录](../README.md)
 + [回到项目首页](../../README.md)
 + [上一节](11.md)
@@ -8,11 +15,18 @@
 ---
 [TOC]
 
++ [ ] [Golang数据结构和链表](https://github.com/3293172751/Block_Chain/blob/master/markdown/Go%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E9%93%BE%E8%A1%A8.md)
+
++ [ ] [Golang双向链表和循环链表](https://github.com/3293172751/Block_Chain/blob/master/markdown/Go%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%8F%8C%E5%90%91%E9%93%BE%E8%A1%A8%E5%92%8C%E5%BE%AA%E7%8E%AF%E9%93%BE%E8%A1%A8.md)
+
+
+
 
 
 
 
 ## END 链接
+
 + [回到目录](../README.md)
 + [上一节](11.md)
 + [下一节](13.md)
