new commit from repely

--- a/markdown/9.md
+++ b/markdown/9.md
@@ -135,6 +135,28 @@ m['apple'] = 'mac'
 
 
 
+## java中哈希表使用
+
+```java
+public static void main(String[] args){
+    HashMap<String,String>map = new HashMap<>();  //key:value(String)
+    map.put("hello","我是xiongxinwei");
+    System.out.println(map.containsKey("hello")); //true
+    System.out.println(map.containsKey("helloword")); //false : 没有加helloword这个key
+    System.out.println(map.get("hello")); //我是xiongxinwei
+    
+    //更新
+    map.put("hello","他是xiongxinwei");   //更新的是value操作
+    System.out.println(map.get("hello")); //他是xiongxinwei
+    
+    map.remove("hello");   //移除he
+}
+```
+
+
+
+
+
 ## 有序表：
 
 > 1. 有序表在使用层面可以理解为一种集合结构
