add file from github

--- a/markdown/9.md
+++ b/markdown/9.md
@@ -14,7 +14,7 @@
 
 **哈希表**，是根据key值直接进行数据访问的数据结构。即通过一个hash函数，将key转换成换成数组的索引值，然后将value存储在该数组的索引位置。如下图：
 
-![img](assets/1O6fMOMjMf7nbKW6ixMMgFQ.png)
+![img](https://sm.nsddd.top/1O6fMOMjMf7nbKW6ixMMgFQ.png?mail:3293172751@qq.com)
 
 > 1. 哈希表在使用层面可以理解为一种集合结构
 > 2. 如果只有key，没有伴随数据value，可以使用HashSet结构(C++中叫UnOrderSet)
@@ -149,13 +149,15 @@ public static void main(String[] args){
     map.put("hello","他是xiongxinwei");   //更新的是value操作
     System.out.println(map.get("hello")); //他是xiongxinwei
     
-    map.remove("hello");   //移除he
+    map.remove("hello");   //移除hello
+    System.out.println(map.containsKey("hello")); //false
 }
 ```
 
+**上面的增删改查都是`O(1)`的时间,都是固定时间,但是这个固定时间是比较大的.**
 
-
-
++ 哈希表中是不会认为你的数据类型不同,在哈希表中都是按照值传递,值相同,就相同
++ 非基础类型(或者是自己定义的类型),是按照引用传递的.
 
 ## 有序表：
 
@@ -168,6 +170,41 @@ public static void main(String[] args){
 > 7. 放入有序表的东西
 >    + 如果是基础类型，内部按值传递，内存占用为这个东西的大小；
 >    + 如果不是基础类型，必须提供比较器（如下代码），且内部按引用传递，内存占用是这个东西内存地址的大小
+
+
+
+## 有序表的使用
+
+```java
+treeMap<Integer,String> treeMap1 = new TreeSet<>();
+treeMap.put(1,"我是1");
+treeMap.put(2,"我是2");
+treeMap.put(3,"我是3");
+System.out.println(treeMap1.containsKey(1)); //true
+System.out.println(treeMap1.containsKey(4)); //false
+System.out.println(treeMap1.get(1)); //"我是1"
+
+treeMap1.put(3,"我是3");   //update
+treeMap1.remove(1);  //移除
+System.out.println(treeMap1.containsKey(1)); //false
+```
+
+**有序表要比哈希表强大的地方在于:**
+
+> treeMap中的所有方法都是`log(n)`的级别,没有哈希表那么小,但是功能很强
+
+```java
+System.out.println(treeMap1.firstKey());  //最小的Key :0
+System.out.println(treeMap1.lastKey());   //最大的Key :3
+
+// 把小于等于2 的, 距离2最近的Key告诉我
+System.out.println(treeMap1.floorKey(2));   //2
+
+// 把大于等于0 的, 距离0最近的Key告诉我
+System.out.println(treeMap1.ceilingKey(1));   //1
+```
+
+**上面的Key不能自己定义,不然会报错,如何自己定义比较器:**
 
 ```java
 tree = new TreeSet<>(new NodeComparator());
@@ -183,6 +220,107 @@ try{
 ```
 
 
+
+## 案例Leetcode
+
++ [leetcode705](https://leetcode.cn/problems/design-hashset/)
+
++ [leetcode.com](https://leetcode.com/problems/design-hashset/)
+
+> Design a HashSet without using any built-in hash table libraries.
+>
+> Implement `MyHashSet` class:
+>
+> + `void add(key)` Inserts the value `key` into the HashSet.
+> + `bool contains(key)` Returns whether the value `key` exists in the HashSet or not.
+> + `void remove(key)` Removes the value `key` in the HashSet. If `key` does not exist in the HashSet, do nothing.
+>
+> **Example 1:**
+>
+> ```
+> Input
+> ["MyHashSet", "add", "add", "contains", "contains", "add", "contains", "remove", "contains"]
+> [[], [1], [2], [1], [3], [2], [2], [2], [2]]
+> Output
+> [null, null, null, true, false, null, true, null, false]
+> 
+> Explanation
+> MyHashSet myHashSet = new MyHashSet();
+> myHashSet.add(1);      // set = [1]
+> myHashSet.add(2);      // set = [1, 2]
+> myHashSet.contains(1); // return True
+> myHashSet.contains(3); // return False, (not found)
+> myHashSet.add(2);      // set = [1, 2]
+> myHashSet.contains(2); // return True
+> myHashSet.remove(2);   // set = [1]
+> myHashSet.contains(2); // return False, (already removed)
+> ```
+
+### 代码
+
+```java
+class MyHashSet {
+    private static final int BASE = 769;
+    private LinkedList[] data;
+
+    /** Initialize your data structure here. */
+    public MyHashSet() {
+        data = new LinkedList[BASE];
+        for (int i = 0; i < BASE; ++i) {
+            data[i] = new LinkedList<Integer>();
+        }
+    }
+    
+    public void add(int key) {
+        int h = hash(key);
+        Iterator<Integer> iterator = data[h].iterator();
+        while (iterator.hasNext()) {
+            Integer element = iterator.next();
+            if (element == key) {
+                return;
+            }
+        }
+        data[h].offerLast(key);
+    }
+    
+    public void remove(int key) {
+        int h = hash(key);
+        Iterator<Integer> iterator = data[h].iterator();
+        while (iterator.hasNext()) {
+            Integer element = iterator.next();
+            if (element == key) {
+                data[h].remove(element);
+                return;
+            }
+        }
+    }
+    
+    /** Returns true if this set contains the specified element */
+    public boolean contains(int key) {
+        int h = hash(key);
+        Iterator<Integer> iterator = data[h].iterator();
+        while (iterator.hasNext()) {
+            Integer element = iterator.next();
+            if (element == key) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private static int hash(int key) {
+        return key % BASE;
+    }
+}
+
+/**
+ * Your MyHashSet object will be instantiated and called as such:
+ * MyHashSet obj = new MyHashSet();
+ * obj.add(key);
+ * obj.remove(key);
+ * boolean param_3 = obj.contains(key);
+ */
+```
 
 
 
