new flod and new file

--- a/markdown/12.md
+++ b/markdown/12.md
@@ -157,7 +157,7 @@ class Solution {
 
 > 单链表是没办法实现双端队列的，因为单链表没有办法跳出上一个，所以使用的是双链表.
 
-```
+```java
 class Solution {
     //链表结构
     public static class MyDeque {
@@ -378,7 +378,7 @@ public static ListNode reverseKGroup(ListNode head, int k) {
 
 > 因为第三阶段最后next指针无论是长链表还是短链表都指向`null`,此时最后一个不为null的结点指向
 
-```
+```java
 /**
  * Definition for singly-linked list.
  * public class ListNode {
@@ -440,6 +440,21 @@ class Solution {
 ```
 
 ### 原题改版
+
+$$
+{\color{Violet} \begin{bmatrix}
+ 5 &2  &3 \\
+ 5 &5  &4 \\
+ 7 &6  &1
+\end{bmatrix}\times 
+\begin{bmatrix}
+ 5 &2  &3 \\
+ 5 &5  &4 \\
+ 7 &6  &1
+\end{bmatrix}} 
+$$
+
+
 
 给定两个 非空链表 l1和 l2 来代表两个非负整数。数字最高位位于链表开始位置。它们的每个节点只存储一位数字。将这两数相加会返回一个新的链表。
 
